--- a/index.html
+++ b/index.html
@@ -17,12 +17,31 @@
         </section>
         <section>
             <!-- this section is for playing with srcset -->
-            <img src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
+             <!-- srcset lets you provide multiple images, and the browser can 
+              choose the right one based on the conditions you give -->
+            <img srcset="
+              images/puppy-2.0.jpg 2x,
+              images/puppy-3.0.jpg 3x"
+            src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
+            <!-- the above x means pixel density, depending on the device you are using -->
         </section>
 
         <section class="test2">
           <!-- this section is for playing with sizes-->
+           <!-- you can also supply a set of images based on their width,
+            which is the w below - the width should correspond to the actual image width -->
+          <img srcset="
+            images/puppy-1.0.jpg 1000w,
+            images/puppy-2.0.jpg 2000w,
+            images/puppy-3.0.jpg 3000w"
 
+            sizes="
+            (min-width:900px) 66.6vw,
+            (min-width:1200px) 33.3vw"
+
+            src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
+            <!-- the sizes set how wide the image is in your browser, telling it to respond
+             based on the changing size of your browser window or media queries -->
         </section>
 
         <section>
